--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+@import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap");
+
+@import "./feature.css";
+
 html {
-  background-color: red;
+  font-family: "Public Sans", sans-serif;
 }
