--- a/style/article.css
+++ b/style/article.css
@@ -5,6 +5,7 @@
 }
 
 .article-container {
+  max-width: 1440px;
   width: 80%;
 }
 
@@ -18,13 +19,13 @@
 
 .article-list {
   display: flex;
+  justify-content: space-between;
   margin-bottom: 60px;
 }
 
 .article-items {
   height: 400px;
-  padding-right: 30px;
-  width: 25%;
+  width: 23%;
 }
 
 .article-content {
