--- a/style/feature.css
+++ b/style/feature.css
@@ -5,6 +5,7 @@
 }
 
 .feature-container {
+  max-width: 1440px;
   width: 80%;
 }
 
@@ -26,14 +27,13 @@
 
 .feature-box {
   display: flex;
+  justify-content: space-between;
   margin: 60px 0;
 }
 
 .feature-content {
-  /* flex-grow: 1; */
   height: 300px;
-  padding-right: 30px;
-  width: 25%;
+  width: 23%;
 }
 
 .feature-icon {
