--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 @import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap");
 
+@import "./header.css";
 @import "./rule.css";
 @import "./feature.css";
 @import "./article.css";
