--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap");
 
 @import "./header.css";
+@import "./banner.css";
 @import "./rule.css";
 @import "./feature.css";
 @import "./article.css";
