--- a/style/article.css
+++ b/style/article.css
@@ -24,13 +24,13 @@
 }
 
 .article-items {
-  height: 400px;
+  height: 420px;
   width: 23%;
 }
 
 .article-content {
   background-color: white;
-  padding: 25px;
+  padding: 25px 30px;
 }
 
 .article-img {
