--- a/style/footer.css
+++ b/style/footer.css
@@ -9,7 +9,7 @@
   height: 110px;
   justify-content: space-between;
   max-width: 1440px;
-  padding: 40px 0;
+  padding: 30px 0 15px;
   width: 80%;
 }
 
@@ -23,6 +23,7 @@
 }
 
 .footer-logo {
+  margin-top: 10px;
   height: 20px;
   width: 20px;
 }
@@ -36,26 +37,7 @@
 .footer-icon {
   display: flex;
   justify-content: space-between;
-  margin-top: 60px;
-}
-
-.footer-menu {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 100px;
-  width: 60%;
-}
-
-@media only screen and (min-width: 1367px) {
-  .footer-menu {
-    margin-left: 200px;
-  }
-}
-
-.footer-menu div p {
-  color: white;
-  font-size: 14px;
-  margin: 0 0 29px;
+  margin-top: 30px;
 }
 
 .footer-2 {
